--- a/views/pregame.html
+++ b/views/pregame.html
@@ -1,16 +1,17 @@
 <h1>Pregame</h1>
 <div ng-controller="PlayerController as playerCtrl">
-  <ul id="ninja-list">
+  <ul id="player-list">
       <li ng-repeat="player in players | orderBy: order | filter: search">
-        <h3>{{player.name}} - {{player.gender}}</h3>
+        <h3>{{player.name}} - {{player.gender}} Level <input id="player-level" class="player-counter" type="number" value=1 name="level"> Bonus <input id="player-bonus" class="player-counter" type="number" value=0 name="level"> Strength <span id="player-strength"></span></h3>
         <span class="remove" ng-click="removePlayer(player)">x</span>
       </li>
   </ul>
-  <form ng-submit="addPlayer()">
-    <input type="text" placeholder="Name" ng-model="newPlayer.name">
-    <input type="radio" name="gender" value="male" ng-model="newPlayer.gender" checked> Male
-    <input type="radio" name="gender" value="female" ng-model="newPlayer.gender"> Female
-    <tt>gender = {{newPlayer.gender | json}}</tt><br/>
-    <input type="submit" value="Add New Player">
+
+  <form name="playerForm" ng-submit="addPlayer()" novalidate>
+    <input id="player-name" type="text" placeholder="Name" name="name" ng-model="newPlayer.name" ng-required="true">
+      <small class="feedback" ng-show="playerForm.name.$touched && playerForm.name.$invalid">Please enter a valid name</small>
+    <input type="radio" name="gender" value="male" ng-model="newPlayer.gender" ng-required="!gender" checked> Male
+    <input type="radio" name="gender" value="female" ng-model="newPlayer.gender" ng-required="!gender"> Female
+    <input type="submit" value="Add New Player" ng-disabled="playerForm.$invalid">
   </form>
 </div>
